--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.10",
     "node-wav-player": "^0.2.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-select": "^5.8.2"
   },
   "devDependencies": {
     "@types/node": "^20",
