--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node-wav-player": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-select": "^5.8.2"
+    "react-select": "^5.8.2",
+    "react-use": "^17.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
