--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "bsky-widget": "^0.1.1",
     "next": "14.2.10",
     "node-wav-player": "^0.2.0",
     "react": "^18",
